# C_CPP

./: .gitignore  README.md
.github/workflows/: TryCI.yml  cmake.yml
hw1/: CMakeLists.txt
hw1/.github/workflows/: cmake.yml
hw1/include/: date.h  list.h  project.h
hw1/src/: date.c  list.c  main.c  project.c
hw1/tests/: CMakeLists.txt  tests.cpp
hw2/: CMakeLists.txt  in  in2
hw2/CMakeModules/: CodeCoverage.cmake
hw2/dynamic_lib/: threads.c  threads.h
hw2/include/: matrix.h
hw2/src/: main.c  matrix.c
hw2/static_lib/: seq.c  seq.h
hw2/test/: CMakeLists.txt  test.cpp
